--- a/index.html
+++ b/index.html
@@ -43,45 +43,63 @@
                 <h1>Dashboard</h1>
             </div>
             <div id="nav-link-container">
-                <div class="logo">
-                    <img src="./icons/home.png" alt="Home icon">
-                    <h3>Home</h3>
-                </div>
-                <div class="logo">
-                    <img src="./icons/account-box.png" alt="Profile icon">
-                    <h3>Profile</h3>
-                </div>
-                <div class="logo">
-                    <img src="./icons/message.png" alt="Message icon">
-                    <h3>Message</h3>
-                </div>
-                <div class="logo">
-                    <img src="./icons/clock-time-two.png" alt="History Icon">
-                    <h3>History</h3>
-                </div>
-                <div class="logo">
-                    <img src="./icons/note-multiple.png" alt="Tasks icon">
-                    <h3>Tasks</h3>
-                </div>
-                <div class="logo">
-                    <img src="./icons/account-group.png" alt="Communities icon">
-                    <h3>Communities</h3>
-                </div>
+                <a href="">
+                    <div class="logo">
+                        <img src="./icons/home.png" alt="Home icon">
+                        <h3>Home</h3>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="logo">
+                        <img src="./icons/account-box.png" alt="Profile icon">
+                        <h3>Profile</h3>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="logo">
+                        <img src="./icons/message.png" alt="Message icon">
+                        <h3>Message</h3>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="logo">
+                        <img src="./icons/clock-time-two.png" alt="History Icon">
+                        <h3>History</h3>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="logo">
+                        <img src="./icons/note-multiple.png" alt="Tasks icon">
+                        <h3>Tasks</h3>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="logo">
+                        <img src="./icons/account-group.png" alt="Communities icon">
+                        <h3>Communities</h3>
+                    </div>
+                </a>
             </div>
 
             <div id="nav-settings-container">
-                <div class="logo">
-                    <img src="./icons/cog.png" alt="Settings icon">
-                    <h3>Settings</h3>
-                </div>
-                <div class="logo">
-                    <img src="./icons/help-box.png" alt="Support icon">
-                    <h3>Support</h3>
-                </div>
-                <div class="logo">
-                    <img src="./icons/shield-check.png" alt="Privacy icon">
-                    <h3>Support</h3>
-                </div>
+                <a href="">
+                    <div class="logo">
+                        <img src="./icons/cog.png" alt="Settings icon">
+                        <h3>Settings</h3>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="logo">
+                        <img src="./icons/help-box.png" alt="Support icon">
+                        <h3>Support</h3>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="logo">
+                        <img src="./icons/shield-check.png" alt="Privacy icon">
+                        <h3>Support</h3>
+                    </div>
+                </a>
             </div>
             
         </nav>
