add announcement card styling

--- a/index.html
+++ b/index.html
@@ -135,7 +135,28 @@
         </div>
 
         <div id="announcements">
+            <h2>Announcements</h2>
+            <div class="card">
+                <h4>Site Maintenance</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Vel ratione totam sunt. Saepe illo sit fuga repellat exercitationem 
+                    impedit distinctio.
+                </p>
+                <hr>
 
+                <h4>Community Share Day</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Vel ratione totam sunt. Saepe illo sit fuga repellat exercitationem 
+                    impedit distinctio.
+                </p>
+                <hr>
+
+                <h4>Updated Privacy Policy</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Vel ratione totam sunt. Saepe illo sit fuga repellat exercitationem 
+                    impedit distinctio.
+                </p>
+            </div>
         </div>
 
         <div id="trending">
