add trending card

--- a/index.html
+++ b/index.html
@@ -160,7 +160,37 @@
         </div>
 
         <div id="trending">
-
+            <h2>Trending</h2>
+            <div class="card">
+                <div class="logo">
+                    <img class="profile-pic" src="./profile-pics/11550604-funny-dog-wearing-winter-clothing.webp" alt="doggus">
+                    <div class="username">
+                        <h6>@tegan</h6>
+                        <p>World Peace Builder</p>
+                    </div>
+                </div>
+                <div class="logo">
+                    <img class="profile-pic" src="./profile-pics/1528396326-419Z1LTjkoL.jpg" alt="doggus">
+                    <div class="username">
+                        <h6>@morgan</h6>
+                        <p>Super Cool Project</p>
+                    </div>
+                </div>
+                <div class="logo">
+                    <img class="profile-pic" src="./profile-pics/istockphoto-1223926479-612x612.jpg" alt="doggus">
+                    <div class="username">
+                        <h6>@kendall</h6>
+                        <p>Life Changing App</p>
+                    </div>
+                </div>
+                <div class="logo">
+                    <img class="profile-pic" src="./profile-pics/maxresdefault.jpg" alt="doggus">
+                    <div class="username">
+                        <h6>@alex</h6>
+                        <p>No Traffic Maker</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
