--- a/index.html
+++ b/index.html
@@ -162,34 +162,50 @@
         <div id="trending">
             <h2>Trending</h2>
             <div class="card">
-                <div class="logo">
-                    <img class="profile-pic" src="./profile-pics/11550604-funny-dog-wearing-winter-clothing.webp" alt="doggus">
-                    <div class="username">
-                        <h6>@tegan</h6>
-                        <p>World Peace Builder</p>
+                <div class="trending-bar">
+                    <div class="logo">
+                        <img class="profile-pic" src="./profile-pics/11550604-funny-dog-wearing-winter-clothing.webp" alt="doggus">
+                        <div class="username">
+                            <h6>@tegan</h6>
+                            <p>World Peace Builder</p>
+                        </div>
                     </div>
+                    <a href=""><img id="share" src="./icons/share-variant (2).png" alt="Share Icon"></a>
                 </div>
-                <div class="logo">
-                    <img class="profile-pic" src="./profile-pics/1528396326-419Z1LTjkoL.jpg" alt="doggus">
-                    <div class="username">
-                        <h6>@morgan</h6>
-                        <p>Super Cool Project</p>
+
+                <div class="trending-bar">
+                    <div class="logo">
+                        <img class="profile-pic" src="./profile-pics/istockphoto-1049869360-612x612.jpg" alt="doggus">
+                        <div class="username">
+                            <h6>@morgan</h6>
+                            <p>Super Cool Project</p>
+                        </div>
                     </div>
+                    <a href=""><img id="share" src="./icons/share-variant (2).png" alt="Share Icon"></a>
                 </div>
-                <div class="logo">
-                    <img class="profile-pic" src="./profile-pics/istockphoto-1223926479-612x612.jpg" alt="doggus">
-                    <div class="username">
-                        <h6>@kendall</h6>
-                        <p>Life Changing App</p>
+
+                <div class="trending-bar">
+                    <div class="logo">
+                        <img class="profile-pic" src="./profile-pics/istockphoto-1223926479-612x612.jpg" alt="doggus">
+                        <div class="username">
+                            <h6>@kendall</h6>
+                            <p>Life Changing App</p>
+                        </div>
                     </div>
+                    <a href=""><img id="share" src="./icons/share-variant (2).png" alt="Share Icon"></a>
                 </div>
-                <div class="logo">
-                    <img class="profile-pic" src="./profile-pics/maxresdefault.jpg" alt="doggus">
-                    <div class="username">
-                        <h6>@alex</h6>
-                        <p>No Traffic Maker</p>
+                
+                <div class="trending-bar">
+                    <div class="logo">
+                        <img class="profile-pic" src="./profile-pics/maxresdefault.jpg" alt="doggus">
+                        <div class="username">
+                            <h6>@alex</h6>
+                            <p>No Traffic Maker</p>
+                        </div>
                     </div>
+                    <a href=""><img id="share" src="./icons/share-variant (2).png" alt="Share Icon"></a>
                 </div>
+
             </div>
         </div>
 
