add icons to project showcase

--- a/index.html
+++ b/index.html
@@ -107,29 +107,59 @@
         <div id="project-container">
             <h2>Your Projects</h2>
             <div id="projects">
-                <div id="project1">
+                <div class="project" id="project1">
                     <h3>Super cool project</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae aut rerum distinctio possimus eaque pariatur cupiditate, quibusdam fuga consequuntur soluta asperiores iste cum, quam, aspernatur doloribus rem porro ullam iure.</p>
+                    <div class="project-icon-container">
+                        <a href=""><img src="./icons/star-plus-outline.png" alt="favourite"></a>
+                        <a href=""><img src="./icons/eye-plus-outline.png" alt="watch"></a>
+                        <a href=""><img src="./icons/share-variant (2).png" alt="share"></a>
+                    </div>
                 </div>
-                <div id="project2">
+                <div class="project" id="project2">
                     <h3>Super cool project</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae aut rerum distinctio possimus eaque pariatur cupiditate, quibusdam fuga consequuntur soluta asperiores iste cum, quam, aspernatur doloribus rem porro ullam iure.</p>
+                    <div class="project-icon-container">
+                        <a href=""><img src="./icons/star-plus-outline.png" alt="favourite"></a>
+                        <a href=""><img src="./icons/eye-plus-outline.png" alt="watch"></a>
+                        <a href=""><img src="./icons/share-variant (2).png" alt="share"></a>
+                    </div>
                 </div>
-                <div id="project3">
+                <div class="project" id="project3">
                     <h3>Super cool project</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae aut rerum distinctio possimus eaque pariatur cupiditate, quibusdam fuga consequuntur soluta asperiores iste cum, quam, aspernatur doloribus rem porro ullam iure.</p>
+                    <div class="project-icon-container">
+                        <a href=""><img src="./icons/star-plus-outline.png" alt="favourite"></a>
+                        <a href=""><img src="./icons/eye-plus-outline.png" alt="watch"></a>
+                        <a href=""><img src="./icons/share-variant (2).png" alt="share"></a>
+                    </div>
                 </div>
-                <div id="project4">
+                <div class="project" id="project4">
                     <h3>Super cool project</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae aut rerum distinctio possimus eaque pariatur cupiditate, quibusdam fuga consequuntur soluta asperiores iste cum, quam, aspernatur doloribus rem porro ullam iure.</p>
+                    <div class="project-icon-container">
+                        <a href=""><img src="./icons/star-plus-outline.png" alt="favourite"></a>
+                        <a href=""><img src="./icons/eye-plus-outline.png" alt="watch"></a>
+                        <a href=""><img src="./icons/share-variant (2).png" alt="share"></a>
+                    </div>
                 </div>
-                <div id="project5">
+                <div class="project" id="project5">
                     <h3>Super cool project</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae aut rerum distinctio possimus eaque pariatur cupiditate, quibusdam fuga consequuntur soluta asperiores iste cum, quam, aspernatur doloribus rem porro ullam iure.</p>
+                    <div class="project-icon-container">
+                        <a href=""><img src="./icons/star-plus-outline.png" alt="favourite"></a>
+                        <a href=""><img src="./icons/eye-plus-outline.png" alt="watch"></a>
+                        <a href=""><img src="./icons/share-variant (2).png" alt="share"></a>
+                    </div>
                 </div>
-                <div id="project6">
+                <div class="project" id="project6">
                     <h3>Super cool project</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae aut rerum distinctio possimus eaque pariatur cupiditate, quibusdam fuga consequuntur soluta asperiores iste cum, quam, aspernatur doloribus rem porro ullam iure.</p>
+                    <div class="project-icon-container">
+                        <a href=""><img src="./icons/star-plus-outline.png" alt="favourite"></a>
+                        <a href=""><img src="./icons/eye-plus-outline.png" alt="watch"></a>
+                        <a href=""><img src="./icons/share-variant (2).png" alt="share"></a>
+                    </div>
                 </div>
             </div>
         </div>
